# zellij-namey

./: Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
design/: tdd.md
scripts/: get_context.sh
src/: context.rs  formatter.rs  main.rs
