[package]
name = "zellij-namey"
version = "0.1.0"
edition = "2021"
authors = ["wusher"]
description = "Zellij plugin that auto-renames tabs based on CWD and git branch"
license = "MIT"
repository = "https://github.com/wusher/zellij-namey"
keywords = ["zellij", "plugin", "terminal", "tabs"]
categories = ["command-line-utilities"]

[dependencies]
zellij-tile = "0.41"

[profile.release]
opt-level = "s"
lto = true
